# railwayapp---cli

./: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: client.rs  config.rs  main.rs  subscription.rs  table.rs
crates/cli/src/commands/: add.rs  completion.rs  delete.rs  docs.rs  domain.rs  down.rs  environment.rs  init.rs  link.rs  list.rs  login.rs  logout.rs  logs.rs  mod.rs  open.rs  run.rs  service.rs  shell.rs  starship.rs  status.rs  unlink.rs  up.rs  variables.rs  whoami.rs
crates/cli/src/util/: prompt.rs
crates/graphql/: Cargo.toml
crates/graphql/src/mutations/: mod.rs
crates/graphql/src/queries/: mod.rs
crates/graphql/src/subscriptions/: mod.rs
