[package]
name = "railwayapp"
version = "3.0.6"
edition = "2021"
license = "MIT"
authors = ["Railway <contact@railway.app>"]
description = "Interact with Railway via CLI"
readme = "../README.md"
homepage = "https://github.com/railwayapp/cli"
repository = "https://github.com/railwayapp/cli"
rust-version = "1.67.1"
default-run = "railway"
include = ["src/**/*", "../LICENSE", "../README.md"]

[[bin]]
name = "railway"
path = "src/main.rs"

[dependencies]
railwayapp-graphql = { path = "../graphql" }

anyhow = "1.0.69"
async-tungstenite = { version = "0.18.0", features = ["tokio-runtime", "tokio-rustls-native-certs"] }
base64 = "0.21.0"
box_drawing = "0.1.2"
clap = { version = "4.1.6", features = ["derive", "suggestions"] }
clap_complete = "4.1.3"
colored = "2.0.0"
console = "0.15.5"
dirs = "4.0.0"
futures = { version = "0.3.26", default-features = false, features = ["compat", "io-compat"] }
graphql-ws-client = { version = "0.3.0", features = ["client-graphql-client"] }
graphql_client = { version = "0.11.0", features = ["reqwest-rustls"] }
gzp = { version = "0.11.3", default-features = false, features = ["deflate_rust"] }
hostname = "0.3.1"
http-body-util = "0.1.0-rc.2"
hyper = { version = "1.0.0-rc.3", features = ["server", "http1"] }
ignore = "0.4.20"
indicatif = "0.17.3"
indoc = "2.0.0"
inquire = "0.5.3"
is-terminal = "0.4.4"
names = { version = "0.14.0", default-features = false }
num_cpus = "1.15.0"
open = "3.2.0"
paste = "1.0.11"
rand = "0.8.5"
reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_with = "2.2.0"
synchronized-writer = "1.1.11"
tar = "0.4.38"
textwrap = "0.16.0"
tokio = { version = "1.25.0", features = ["full"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
